Fixed clockwork and vine troops slots following the recent changes
The recent getItemslots() and command combination changes interacted poorly with the itemslots implementation of clockwork troops, which used multiple #itemslots +X modifiers to add different body parts one by one.

This caused problems especially when a single unit ended up with multiple combinatory #itemslots +X commands, as modifying a +X command with another +Y command would result in Z, without the + modifier, which would then completely override whatever other underlying values there may be.

The new approach focuses on defining the default slots of a unit by taking the default skeleton (head, body, feet, 2 hands, bow, 2 misc), and then modifying it first through the use of the #baseitemslot tag (which is more readable than the #command "#itemslots +XXXXXX" expression), and then further modifying them with the #itemslot tag if needed.